v1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  labels:
    app: pacman
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: kota661/pacman:v1
        ports:
        - containerPort: 80
