v1/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: pacman-lb
  labels:
    app: pacman
spec:
  selector:
    app: pacman
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
