v1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pacman
spec:
  selector:
    app: pacman
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000 #30000-32767
